Testing background issue on mobile

--- a/styles.css
+++ b/styles.css
@@ -37,7 +37,7 @@ a{
         background-size: auto;
         background-repeat: no-repeat;
         background-position: center;
-        width: auto;
+        width: 100%;
         height: auto;
         background-origin: border-box;
     }
